--- a/css/projects.css
+++ b/css/projects.css
@@ -33,11 +33,11 @@ header h1{
 	padding: 10px;
 }
 
-.video{
-	/*padding: 5px;*/
+/*.video{
+	padding: 5px;
 	text-decoration:none;
 	color: #DDA0DD;
-}
+}*/
 
 .projects a{
 	text-decoration:none;
